# react_bot

./: .breakpoints  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh  youtube-8JPlaSeCUXE-TRASH_CLAN.webm.part  youtube-dQw4w9WgXcQ-Rick_Astley_-_Never_Gonna_Give_You_Up_Official_Music_Video.webm.part  yttest.py
assets/: reaction-queries.json
cogs/: joekmusic.py  moop.py  music.py
util/: now.py  soy.py
