[tool.poetry]
name = "repl_python3_ReactBot"
version = "0.1.0"
description = ""
authors = ["uuupah <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
